tried to fix footer wrapping/position

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -24,6 +24,7 @@ h1{
     font-size: 4em;
     margin: .2em 0 .9em 0;
 }
+
 .nav-links{
 list-style: none;
 }
@@ -31,72 +32,115 @@ list-style: none;
 ul {
     padding-inline-start: 0;
 }
-li{
+
+nav li{
     background-color: silver;
     padding: 1em;
     margin: 1em 0em;
     text-align: center;
     font-weight: bold;
 }
+
 .header-img{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
 }
+
 .hidden-on-desktop {
 
-
 }
+
 .main>h2{
     font-weight: bold;
 }
+
 .sub-section{
     font-style: italic;
 }
 
 footer img {
-    max-width: 3%;
-    margin-bottom: -1.2em;
-    float: right;
+    max-width: 2.5%;
+    /*margin-bottom: -1.2em;*/
+    /*float: right;*/
+    /*display: inline;*/
 }
+/*footer a{*/
+    /*white-space: nowrap;*/
+/*}*/
 
 .header-img img {
     width: 100%
 }
-footer p {
+
+/*footer p {*/
+    /*float: left;*/
+    /*flex-wrap: nowrap;*/
+/*}*/
+
+footer li {
+    list-style: none;
+    display: inline;
+}
+
+footer img {
+
+}
+
+footer {
     float: left;
 }
 
-@media screen and (min-width: 950px){
-    .hidden-on-desktop{
+@media screen and (min-width: 950px) {
+
+    .hidden-on-desktop {
         display: none;
     }
-    ul{
+
+    nav ul {
         float: right;
         margin-top: 3em;
     }
 
-    li{
+    nav li {
         text-align: right;
         font-weight: bold;
         background-color: white;
         display: inline;
     }
-    h1{
+
+    h1 {
         float: left;
     }
-    .main{
+
+    .main {
         float: left;
         width: 66%;
     }
+
     .sub-section {
         float: right;
         width: 33%;
     }
-    footer {
-        position: absolute;
-        margin: 200px 10px;
+
+    footer p {
+        /*float: left*/
     }
 
+    /*footer {*/
+        /*!*margin: 200px 10px;*!*/
+        /*!*max-width: 100%;*!*/
+        /*!*display: inline-block;*!*/
+    /*}*/
+
+    /*footer p {*/
+        /*width: 50%;*/
+        /*float: left;*/
+    /*}*/
+
+    /*.social-media-links {*/
+        /*width: 50%;*/
+        /*float: right;*/
+    /*}*/
 }
